# offsec_rust

./: README.md
aesshellcode_remote_inject/: Cargo.toml
aesshellcode_remote_inject/src/: main.rs
base64shellcode_remote_inject/: Cargo.toml
base64shellcode_remote_inject/src/: main.rs
callback_code_execution/: Cargo.toml
callback_code_execution/src/: main.rs
dll_ops/addfn_dll/: Cargo.toml
dll_ops/addfn_loader/: Cargo.toml
dll_ops/addfn_loader/src/: main.rs
dll_ops/msgbox_dll/: Cargo.toml
dll_ops/msgbox_dll/src/: lib.rs
dll_ops/msgbox_loader/: Cargo.toml
dll_ops/msgbox_loader/src/: main.rs
dynamicfuncload_local_inject/: Cargo.toml
dynamicfuncload_local_inject/src/: main.rs
python_automation/embedding/: shcode_embedder.py  test.txt  test_modified.txt
python_automation/encoding/: calc_shellcode.xor  xor_cryptor.py  xor_encoded.txt
python_automation/encrypting/: aes_cryptor.py
remote/basic_tcp_client/: Cargo.toml
remote/basic_tcp_client/src/: main.rs
remote/basic_tcp_server/: Cargo.toml
remote/basic_tcp_server/src/: main.rs
shellcode_local_inject/: Cargo.toml  README.md
shellcode_local_inject/src/: main.rs
shellcode_local_inject_nowinapi/: Cargo.toml
shellcode_local_inject_nowinapi/src/: main.rs
shellcode_remote_inject/: Cargo.toml  README.md
shellcode_remote_inject/src/: main.rs
xorobfus_local_inject/: Cargo.toml
xorobfus_local_inject/src/: main.rs
xorobfus_remote_inject/: Cargo.toml
xorobfus_remote_inject/src/: main.rs
xorshellcode_remote_inject/: Cargo.toml
xorshellcode_remote_inject/src/: main.rs
